<resources>
    <string name="app_name">OMD</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="loading">Loading</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="customer_name">  customer name  </string>
    <string name="customer_phone">  customer phone  </string>
    <string name="customer_address">  customer address  </string>
    <string name="Add_customer">  Add customer  </string>
    <string name="product_name">  Product name  </string>
    <string name="product_price">  product price  </string>
    <string name="quantity">  quantity  </string>
    <string name="save">  Save  </string>
    <string name="deserved_amount">  deserved amount  </string>
    <string name="Amount_of_defenses">  Amount of defenses  </string>
    <string name="confirm"> confirm </string>
    <string name="search"> Search </string>
    <string name="price">  price  </string>
    <string name="phone">  phone  </string>
    <string name="password">  Password  </string>
    <string name="login">  Login  </string>
    <string name="Date_of_delivery">Date of delivery</string>
    <string name="day">Day</string>
    <string name="month">Month</string>
    <string name="year">Year</string>
    <string name="installment">installment</string>
    <string name="cash">Cash</string>
    <string name="final_cost">Final Cost</string>
    <string name="price_before_discount">price before discount</string>
    <string name="calculate_cost">calculate cost</string>
    <string name="confirm_order"> Confirm Order </string>
    <string name="date">  Date  </string>
    <string name="products"> products </string>
    <string name="delegate_name">  delegate name  </string>
    <string name="email">Email</string>
    <string name="confirm_password">confirm password</string>
    <string name="national_id">National Id</string>
    <string name="address">Address</string>
    <string name="cancel"> Cancel </string>
    <string name="sale"> Sale </string>
    <string name="collect"> Collect </string>
    <string name="report"> Report </string>
    <string name="billes"> Billes </string>
    <string name="name"> Name </string>
    <string name="Number_of_customers"> Number of customers </string>
    <string name="total_sales">  Total Sales  </string>
    <string name="edit">Edit</string>
    <string name="done">Done</string>
    <string name="fill_fields">please, Fill all Fields</string>
    <string name="customer_added">Customer Added</string>
    <string name="password_not_compatable">Password Not identical</string>
    <string name="account_created">Account Created</string>
    <string name="enter_valid_number">Enter valid Number</string>
    <string name="product_added">Product Added</string>
    <string name="total_money">  Total money  </string>
    <string name="no_result">No Result</string>
    <string name="n_customers">#Customers</string>
    <string name="logout">Logout</string>
    <string name="enter_payment_type">Enter Payment Type</string>
    <string name="quantity_not_available">quantity is not aviliable</string>
    <string name="customers">Customers</string>
    <string name="delegates">Delegates</string>
    <string name="add_product">Add product</string>
    <string name="Outstanding_Orders">Outstanding Orders</string>
    <string name="My_Orders">My Orders</string>
    <string name="logo">logo</string>
    <string name="photo">photo</string>
    <string name="line">Line</string>
    <string name="ad_id">ca-app-pub-8606368708228706/6906161578</string>
    <string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>

</resources>
