<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CollectionActivity">

    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="70dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:fontFamily="@font/cairo_semibold"
        android:text="@string/customer_name"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.51"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/phone"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/cairo_semibold"
        android:text="@string/customer_phone"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="@+id/name"
        app:layout_constraintStart_toStartOf="@+id/name"
        app:layout_constraintTop_toBottomOf="@+id/name" />

    <TextView
        android:id="@+id/address"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/cairo_semibold"
        android:text="@string/customer_address"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="@+id/phone"
        app:layout_constraintStart_toStartOf="@+id/phone"
        app:layout_constraintTop_toBottomOf="@+id/phone" />


    <TextView
        android:id="@+id/dept"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:fontFamily="@font/cairo_semibold"
        android:text="@string/deserved_amount"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/address"
        app:layout_constraintVertical_bias="0.115" />

    <TextView
        android:id="@+id/textView21"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/cairo_semibold"
        android:text="@string/Amount_of_defenses"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="22sp"
        app:layout_constraintEnd_toStartOf="@+id/pay"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dept" />

    <ProgressBar
        android:id="@+id/progress_colloction"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:visibility="invisible"
        android:background="#00000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <EditText
        android:id="@+id/pay"
        android:layout_width="148dp"
        android:layout_height="45dp"
        android:background="@drawable/curve_corner"
        android:elevation="10dp"
        android:ems="10"
        android:fontFamily="@font/cairo_semibold"
        android:gravity="center"
        android:inputType="numberDecimal"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="@+id/textView21"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/textView21"
        app:layout_constraintTop_toTopOf="@+id/textView21"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/done"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:padding="8dp"
        android:elevation="10dp"
        android:background="@drawable/curve_corner2"
        android:fontFamily="@font/cairo_semibold"
        android:text="@string/confirm"
        android:textColor="@color/white"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView21" />
</android.support.constraint.ConstraintLayout>