<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white">

    <LinearLayout
        android:id="@+id/linear1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="10dp"
        android:gravity="end">


        <TextView
            android:id="@+id/txt_delegateName"
            android:layout_width="0dp"
            android:layout_weight="3"
            android:layout_height="wrap_content"
            android:layout_marginEnd="15dp"
            android:layout_marginRight="8dp"
            android:fontFamily="@font/cairo_semibold"
            android:text="@string/name"
            android:textAlignment="center"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="18sp"
            />

        <TextView
            android:id="@+id/delegateName"
            android:layout_width="0dp"
            android:layout_weight="7"
            android:layout_height="wrap_content"
            android:layout_marginEnd="15dp"
            android:layout_marginTop="8dp"
            android:layout_marginRight="8dp"
            android:fontFamily="@font/cairo_semibold"
            android:text="@string/name"
            android:textAlignment="center"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="18sp"
            />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linear1"
        android:gravity="end">



        <TextView
            android:id="@+id/txt_delegatePhone"
            android:layout_width="0dp"
            android:layout_weight="3"
            android:layout_height="wrap_content"
            android:fontFamily="@font/cairo_semibold"
            android:text="@string/phone"
            android:textAlignment="center"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="18sp"
            />

        <TextView
            android:id="@+id/delegatePhone"
            android:layout_width="0dp"
            android:layout_weight="7"
            android:layout_height="wrap_content"
            android:fontFamily="@font/cairo_semibold"
            android:textAlignment="center"
            android:text="@string/phone"
            android:layout_marginTop="8dp"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="18sp"
            />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linear2"
        android:gravity="end">



        <TextView
            android:id="@+id/txt_delegateMail"
            android:layout_width="0dp"
            android:layout_weight="3"
            android:textAlignment="center"
            android:layout_height="wrap_content"
            android:fontFamily="@font/cairo_semibold"
            android:text="@string/email"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="18sp"
            />

        <TextView
            android:id="@+id/delegateMail"
            android:layout_width="0dp"
            android:layout_weight="7"
            android:textAlignment="center"
            android:layout_height="wrap_content"
            android:fontFamily="@font/cairo_semibold"
            android:layout_marginTop="8dp"
            android:text="@string/email"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="18sp"
            />



    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linear3"
        android:gravity="end">


        <TextView
            android:id="@+id/txt_delegateAddress"
            android:layout_width="0dp"
            android:layout_weight="3"
            android:layout_height="wrap_content"
            android:fontFamily="@font/cairo_semibold"
            android:text="@string/address"
            android:textAlignment="center"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="18sp"
            />
        <TextView
            android:id="@+id/delegateID"
            android:layout_width="0dp"
            android:layout_weight="9"
            android:layout_height="wrap_content"
            android:fontFamily="@font/cairo_semibold"
            android:text="@string/address"
            android:layout_marginTop="8dp"
            android:textAlignment="center"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="18sp"
            />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linear4"
        android:gravity="end">


        <TextView
            android:id="@+id/txt_delegateID"
            android:layout_width="0dp"
            android:layout_weight="4"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:fontFamily="@font/cairo_semibold"
            android:text="@string/national_id"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="18sp"
            />

        <TextView
            android:id="@+id/delegateAddress"
            android:layout_width="0dp"
            android:layout_weight="7"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textAlignment="center"
            android:fontFamily="@font/cairo_semibold"
            android:text="@string/national_id"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="18sp"
            />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linear5"
        android:gravity="end">



        <TextView
            android:id="@+id/txt_delegateSales"
            android:layout_width="0dp"
            android:layout_weight="6.5"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:fontFamily="@font/cairo_semibold"
            android:text="@string/Number_of_customers"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="18sp"
            />

        <TextView
            android:id="@+id/delegateSales"
            android:layout_width="0dp"
            android:layout_weight="7"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textAlignment="center"
            android:fontFamily="@font/cairo_semibold"
            android:text="@string/Number_of_customers"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="18sp"
            />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linear6"
        android:gravity="end">


        <TextView
            android:id="@+id/txt_delegateSalsValue"
            android:layout_width="0dp"
            android:layout_weight="4"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:fontFamily="@font/cairo_semibold"
            android:text="@string/total_sales"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="18sp"
            />
        <TextView
            android:id="@+id/delegateSalesValue"
            android:layout_width="0dp"
            android:layout_weight="7"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textAlignment="center"
            android:fontFamily="@font/cairo_semibold"
            android:text="@string/total_sales"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="18sp"
            />

    </LinearLayout>
    <!--
        <LinearLayout
            android:id="@+id/linear6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@id/linear5"
            app:layout_constraintEnd_toEndOf="parent"
            android:gravity="end">


    <TextView
        android:id="@+id/delegateSales"
        android:layout_width="0dp"
        android:layout_weight="7"
        android:textAlignment="center"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="16dp"
        android:fontFamily="@font/cairo_semibold"
        android:text="المبيعات : "
        android:textColor="@color/colorPrimaryDark"
        android:textSize="18sp"
        />

        <TextView
            android:id="@+id/txt_delegateSales"
            android:layout_width="0dp"
            android:layout_weight="3"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:textAlignment="center"
            android:fontFamily="@font/cairo_semibold"
            android:text="المبيعات : "
            android:textColor="@color/colorPrimaryDark"
            android:textSize="18sp"
            />
    </LinearLayout>
     -->
    <View
        android:id="@+id/delegate_view"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="5dp"
        android:layout_marginStart="5dp"
        android:contentDescription="@string/line"
        android:background="@color/colorPrimaryDark"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linear7" />

</android.support.constraint.ConstraintLayout>